Min-width fixes on mobile

--- a/scss/blocks/markdown.scss
+++ b/scss/blocks/markdown.scss
@@ -29,6 +29,7 @@
 
   table {
     width: -webkit-fill-available;
+    min-width: 560px !important;
 
     img {
       max-width: 100%;
